--- a/highlightlibrary/build.gradle
+++ b/highlightlibrary/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
@@ -23,6 +25,6 @@ android {
 
 dependencies {
     provided fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
 }
